Final del curso de CSS Grid de platzi

--- a/package.json
+++ b/package.json
@@ -15,11 +15,6 @@
   ],
   "author": "@JorgepalaciosCL\u001b[1;5D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[3~\u001b[P\u001b[C\u001b[C",
   "license": "MIT",
-  "devDependencies": {
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0"
-  },
-  "dependencies": {
-    "lodash": "^4.17.11"
-  }
+  "devDependencies": {},
+  "dependencies": {}
 }
